fixed extra margin on lois table

--- a/templates/blocks/my-polis-payments/_my-polis-payments.scss
+++ b/templates/blocks/my-polis-payments/_my-polis-payments.scss
@@ -1,6 +1,5 @@
 .polis-payments {
 	width: 100%;
-	margin-bottom: 122px;
 	border-collapse: collapse;
 }
 
